extensions/client_cpp/hl2ss_ulm.h

//-----------------------------------------------------------------------------
// Adapters
//-----------------------------------------------------------------------------

struct configuration_rm_vlc
{
    uint64_t chunk = hl2ss::chunk_size::RM_VLC;
    uint8_t mode = hl2ss::stream_mode::MODE_1;
    uint8_t divisor = 1;
    uint8_t profile = hl2ss::video_profile::H265_MAIN;
    uint8_t level = hl2ss::h26x_level::DEFAULT;
    uint32_t bitrate = 0;
    int64_t options_size = -1;
    uint64_t const* options_data = nullptr;
    void* _reserved; //
};
struct configuration_rm_depth_ahat
{
    uint64_t chunk = hl2ss::chunk_size::RM_DEPTH_AHAT;
    uint8_t mode = hl2ss::stream_mode::MODE_1;
    uint8_t divisor = 1;
    uint8_t profile_z = hl2ss::depth_profile::SAME;
    uint8_t profile_ab = hl2ss::video_profile::H265_MAIN;
    uint8_t level = hl2ss::h26x_level::DEFAULT;
    uint8_t _reserved_0[3]; //
    uint32_t bitrate = 0;
    uint32_t _reserved_1; //
    int64_t options_size = -1;
    uint64_t const* options_data = nullptr;
    void* _reserved_2; //
};
struct configuration_rm_depth_longthrow
{
    uint64_t chunk = hl2ss::chunk_size::RM_DEPTH_LONGTHROW;
    uint8_t mode = hl2ss::stream_mode::MODE_1;
    uint8_t divisor = 1;
    uint8_t png_filter = hl2ss::png_filter_mode::PAETH;
    uint8_t _reserved[5]; //
};
struct configuration_rm_imu
{
    uint64_t chunk = hl2ss::chunk_size::RM_IMU;
    uint8_t mode = hl2ss::stream_mode::MODE_1;
    uint8_t _reserved[7]; //
};
struct configuration_pv
{
    uint64_t chunk = hl2ss::chunk_size::PERSONAL_VIDEO;
    uint8_t mode = hl2ss::stream_mode::MODE_1;
    uint8_t _reserved_0; //
    uint16_t width = 1920;
    uint16_t height = 1080;
    uint8_t framerate = 30;
    uint8_t divisor = 1;
    uint8_t profile = hl2ss::video_profile::H265_MAIN;
    uint8_t level = hl2ss::h26x_level::DEFAULT;
    uint16_t _reserved_1; //
    uint32_t bitrate = 0;
    int64_t options_size = -1;
    uint64_t const* options_data = nullptr;
    void* _reserved_2; //
};
struct configuration_microphone
{
    uint64_t chunk = hl2ss::chunk_size::MICROPHONE;
    uint8_t profile = hl2ss::audio_profile::AAC_24000;
    uint8_t level = hl2ss::aac_level::L2;
    uint8_t _reserved[6]; //
};
struct configuration_si
{
    uint64_t chunk = hl2ss::chunk_size::SPATIAL_INPUT;
};
struct configuration_eet
{
    uint64_t chunk = hl2ss::chunk_size::EXTENDED_EYE_TRACKER;
    uint8_t fps = 30;
    uint8_t _reserved[7]; //
};
struct configuration_extended_audio
{
    uint64_t chunk = hl2ss::chunk_size::EXTENDED_AUDIO;
    uint32_t mixer_mode = hl2ss::mixer_mode::BOTH;
    float loopback_gain = 1.0f;
    float microphone_gain = 1.0f;
    uint8_t profile = hl2ss::audio_profile::AAC_24000;
    uint8_t level = hl2ss::aac_level::L2;
    uint8_t _reserved[2]; //
};
struct configuration_extended_depth
{
    uint64_t chunk = hl2ss::chunk_size::EXTENDED_DEPTH;
    uint64_t media_index = 0xFFFFFFFF;
    uint64_t stride_mask = 0x3F;
    uint8_t mode = hl2ss::stream_mode::MODE_1;
    uint8_t divisor = 1;
    uint8_t profile_z = hl2ss::depth_profile::ZDEPTH;
    uint8_t _reserved[5]; //
};
struct configuration_pv_subsystem
{
    uint8_t enable_mrc = false;
    uint8_t hologram_composition = true;
    uint8_t recording_indicator = false;
    uint8_t video_stabilization = false;
    uint8_t blank_protected = false;
    uint8_t show_mesh = false;
    uint8_t shared = false;
    uint8_t _reserved_0; //
    float global_opacity = 0.9f;
    float output_width = 0.0f;
    float output_height = 0.0f;
    uint32_t video_stabilization_length = 0;
    uint32_t hologram_perspective = hl2ss::hologram_perspective::PV;
    uint32_t _reserved_1; //
};
struct packet
{
    int64_t frame_stamp;
    uint64_t timestamp;
    uint32_t sz_payload;
    int32_t status;
    uint8_t* payload;
    hl2ss::matrix_4x4* pose;
};
struct sm_mesh
{
    uint32_t status;
    hl2ss::vector_3 vertex_position_scale;
    uint64_t bounds_size;
    uint64_t vertex_positions_size;
    uint64_t triangle_indices_size;
    uint64_t vertex_normals_size;
    hl2ss::matrix_4x4 pose;
    void* bounds_data;
    void* vertex_positions_data;
    void* triangle_indices_data;
    void* vertex_normals_data;
    void* _reserved;
};
struct su_mesh
{
    uint64_t vertex_positions_size;
    uint64_t triangle_indices_size;
    void* vertex_positions_data;
    void* triangle_indices_data;
};
struct su_item
{
    hl2ss::guid id;
    int32_t kind;
    uint32_t _reserved_0;
    hl2ss::quaternion orientation;
    hl2ss::vector_3 position;
    int32_t alignment;
    hl2ss::vector_2 extents;
    uint64_t meshes_count;
    uint64_t collider_meshes_count;
    hl2ss::matrix_4x4 location;
    void* meshes_data;
    void* collider_meshes_data;
    void* _reserved_1;
};
struct su_result
{
    uint32_t status;
    uint32_t _reserved;
    uint64_t items_count;
    hl2ss::matrix_4x4 extrinsics;
    hl2ss::matrix_4x4 pose;
    void* items_data;
};
struct su_task 
{
    bool enable_quads;
    bool enable_meshes;
    bool enable_only_observed;
    bool enable_world_mesh;
    uint32_t mesh_lod;
    float query_radius;
    uint8_t create_mode;
    uint8_t kind_flags;
    bool get_orientation;
    bool get_position;
    bool get_location_matrix;
    bool get_quad;
    bool get_meshes;
    bool get_collider_meshes;
    uint32_t _reserved_0;
    uint64_t guid_list_size;
    hl2ss::guid const* guid_list_data;
    void* _reserved_1;
};
struct gmq_message
{
    uint32_t command;
    uint32_t size;
    uint8_t* data;
    void* _reserved;
};
//-----------------------------------------------------------------------------
// Core
//-----------------------------------------------------------------------------

HL2SS_CLIENT_IMPORT
int32_t HL2SS_CALL initialize();
HL2SS_CLIENT_IMPORT
int32_t HL2SS_CALL cleanup();
HL2SS_CLIENT_IMPORT
void HL2SS_CALL close_handle(void* h);
//-----------------------------------------------------------------------------
// Interfaces
//-----------------------------------------------------------------------------

HL2SS_CLIENT_IMPORT
void* HL2SS_CALL open_stream(char const* host, uint16_t port, uint64_t buffer_size, void const* configuration, uint8_t decoded);
HL2SS_CLIENT_IMPORT
void* HL2SS_CALL open_ipc(char const* host, uint16_t port);
//-----------------------------------------------------------------------------
// Grab
//-----------------------------------------------------------------------------

HL2SS_CLIENT_IMPORT
void* HL2SS_CALL get_by_index(void* source, int64_t frame_stamp, hl2ss::ulm::packet& packet);
HL2SS_CLIENT_IMPORT
void* HL2SS_CALL get_by_timestamp(void* source, uint64_t timestamp, int32_t time_preference, int32_t tiebreak_right, hl2ss::ulm::packet& packet);
//-----------------------------------------------------------------------------
// Control
//-----------------------------------------------------------------------------

HL2SS_CLIENT_IMPORT
int32_t HL2SS_CALL start_subsystem_pv(char const* host, uint16_t port, void const* configuration);
HL2SS_CLIENT_IMPORT
int32_t HL2SS_CALL stop_subsystem_pv(char const* host, uint16_t port);
//-----------------------------------------------------------------------------
// Calibration
//-----------------------------------------------------------------------------

HL2SS_CLIENT_IMPORT
void* HL2SS_CALL download_calibration(char const* host, uint16_t port, void const* configuration, void*& calibration);
HL2SS_CLIENT_IMPORT
void* HL2SS_CALL download_device_list(char const* host, uint16_t port, void const* configuration, uint64_t& size, uint8_t*& query);
//-----------------------------------------------------------------------------
// Core
//-----------------------------------------------------------------------------

HL2SS_INLINE
void initialize()
{
    check_result(hl2ss::ulm::initialize());
}
HL2SS_INLINE
void cleanup()
{
    check_result(hl2ss::ulm::cleanup());
}
//-----------------------------------------------------------------------------
// Control
//-----------------------------------------------------------------------------

HL2SS_INLINE
void start_subsystem_pv(char const* host, uint16_t port, void const* configuration)
{
    check_result(hl2ss::ulm::start_subsystem_pv(host, port, configuration));
}
HL2SS_INLINE
void stop_subsystem_pv(char const* host, uint16_t port)
{
    check_result(hl2ss::ulm::stop_subsystem_pv(host, port));
}
//-----------------------------------------------------------------------------
// API
//-----------------------------------------------------------------------------

using configuration_rm_vlc             = hl2ss::ulm::configuration_rm_vlc;
using configuration_rm_depth_ahat      = hl2ss::ulm::configuration_rm_depth_ahat;
using configuration_rm_depth_longthrow = hl2ss::ulm::configuration_rm_depth_longthrow;
using configuration_rm_imu             = hl2ss::ulm::configuration_rm_imu;
using configuration_pv                 = hl2ss::ulm::configuration_pv;
using configuration_microphone         = hl2ss::ulm::configuration_microphone;
using configuration_si                 = hl2ss::ulm::configuration_si;
using configuration_eet                = hl2ss::ulm::configuration_eet;
using configuration_extended_audio     = hl2ss::ulm::configuration_extended_audio;
using configuration_extended_depth     = hl2ss::ulm::configuration_extended_depth;
using configuration_pv_subsystem       = hl2ss::ulm::configuration_pv_subsystem;
HL2SS_INLINE
void initialize()
{
    hl2ss::shared::initialize();
}
HL2SS_INLINE
void cleanup()
{
    hl2ss::shared::cleanup();
}
HL2SS_INLINE
std::unique_ptr<hl2ss::shared::source> open_stream(char const* host, uint16_t port, uint64_t buffer_size, void* configuration, uint8_t decoded)
{
    return std::make_unique<hl2ss::shared::source>(host, port, buffer_size, configuration, decoded);
}
template<typename T>
std::unique_ptr<T> open_ipc(char const* host, uint16_t port)
{
    return std::make_unique<T>(host, port);
}
HL2SS_INLINE
void start_subsystem_pv(char const* host, uint16_t port, void const* configuration)
{
    hl2ss::shared::start_subsystem_pv(host, port, configuration);
}
HL2SS_INLINE
void stop_subsystem_pv(char const* host, uint16_t port)
{
    hl2ss::shared::stop_subsystem_pv(host, port);
}
template<typename T>
std::unique_ptr<hl2ss::shared::calibration_view<T>> download_calibration(char const* host, uint16_t port, void const* configuration)
{
    return std::make_unique<hl2ss::shared::calibration_view<T>>(host, port, configuration);
}
HL2SS_INLINE
std::unique_ptr<hl2ss::shared::device_list_view> download_device_list(char const* host, uint16_t port, void const* configuration)
{
    return std::make_unique<hl2ss::shared::device_list_view>(host, port, configuration);
}